# 3DViewer

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: basic-build.yml
project_info_rus/: README_RUS.md
src/: main.cpp
src/controller/: controller.cpp  controller.h  controller.hpp
src/model/: model.cpp  model.h  model.hpp
src/view/: glwidget.cpp  glwidget.h  glwidget.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp
test/: CMakeLists.txt  controller_test.cpp  error_handling_test.cpp  integration_test.cpp  model_test.cpp
